<resources>
    <string name="app_name">Helsinki Outdoor Activities</string>
    <string name="txt_sign_up">SIGN UP</string>
    <string name="txt_log_in">LOGIN</string>
    <string name="txt_user_name">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_email">Email</string>
    <string name="txt_login_fail">Login fail</string>
    <string name="invalid_name">User name must not be empty</string>
    <string name="duplicate_name">User with this name already exists</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="empty_string" />
    <string name="txt_empty" />
    <string name="todo">TODO</string>

    <!--Home-->
    <string name="desc_map">Map of your current location</string>
    <string name="desc_map_center">Center your map</string>

    <!--Tabs-->
    <string name="tab_map">Map</string>
    <string name="tab_places">Places</string>
    <string name="tab_profile">Profile</string>
    <string name="textview">TextView</string>

    <!--Tab Places-->
    <string name="places_header">More gyms nearby</string>

    <!--Permission screen-->
    <string name="have_permission">Do we have your permission?</string>
    <string name="permission_text">Allow us to use your location to find outdoor gyms near you.</string>
    <string name="button_permission">Allow location services</string>

    <!--Bottom menu-->
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="profile">Profile</string>
    <string name="weather">Weather</string>

    <!--Address-->
    <string name="address1">Ulappansaarentie 3</string>

    <!--Names of places-->
    <string name="place1">Ulappansaarentien ulkopaikka</string>

    <string name="distance">2,3 km</string>

    <string name="like_amount">2</string>

    <string name="comment_amount">2</string>
    <string name="comments">Comments 3</string>
    <string name="no_comment">No comments</string>

    <string name="search">Search</string>

    <!--Profile-->
    <string name="desc_profile_image">Your profile image</string>
    <string name="txt_current_user">Current user</string>
    <string name="txt_con_desc_blue_pic">blue background picture</string>

    <string name="cd_team_ph">Image</string>
    <string name="gym_title">Title</string>

    <!--Search-->
    <string name="txt_search">   Search…</string>

    <string name="txt_username">Username</string>

    <!--Workout planner fragment-->
    <string name="workout_plan">Workout plans</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="exercises">exercises</string>
    <string name="exercises_header">Exercises</string>

    <string name="txt_btn_logout">Log out</string>

    <!--Weather-->
    <string name="desc_weather_icon">Weather icon</string>
    <string name="loading_weather">Loading weather data</string>
    <string name="location_loading">Loading location</string>
    <string name="temperature">0°C</string>

    <!--Exercise-->
    <string name="exercise_name">exercise_name</string>
    <string name="area_of_focus">area of focus</string>
    <string name="instruction">instruction</string>
    <string name="add_exercise">Add exercise</string>

    <string name="more_info">more_info>>></string>

</resources>