<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background_picture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:alpha="0.61"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/main_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/txt_user_name"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/txt_duplicate_name"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/duplicate_name"
        android:text="@string/txt_empty"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <EditText
        android:id="@+id/value_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/txt_email"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_duplicate_name"
        tools:ignore="ContentDescription,TextFields" />

    <TextView
        android:id="@+id/txt_duplicate_email"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/invalid_email"
        android:text="@string/empty_string"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_email" />

    <EditText
        android:id="@+id/value_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/txt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_duplicate_email"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/value_confirm_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/txt_confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_password"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/txt_sign_up"
        android:text="@string/txt_sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_confirm_password"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>