<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_picture"
        android:layout_width="750dp"
        android:layout_height="0dp"
        android:alpha="0.61"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/main_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="308dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:width="200dp"
        android:gravity="center"
        android:text="@string/have_permission"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/have_permission" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="308dp"
        android:layout_height="172dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:text="@string/permission_text"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/permission_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_allow_services"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/button_permission"
        android:text="@string/button_permission"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>