<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/arrow_back_button_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:contentDescription="TODO"
        android:shadowRadius="12"
        android:tint="@color/white"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/exercise_picture"
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            android:src ="@drawable/ic_baseline_photo_24"/>

        <EditText
            android:id="@+id/value_exercise_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.9"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/exercise_name"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,TextFields" />

        <TextView
            android:id="@+id/area_of_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="Area of focus"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/value_area_of_focus"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.9"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/area_of_focus"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,TextFields" />


        <TextView
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="Instruction"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/value_instruction"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.9"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/instruction"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,TextFields" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_exercise"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/txt_log_in"
            android:text="@string/add_exercise"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>