<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="2"
            android:text="@string/workout_plan"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/button_create_workout_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:text="@string/create"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@null"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workout_plan_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="3"
            android:text="@string/exercises_header"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/button_create2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:text="@string/create"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@null"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercises_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>