<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="74dp"
    android:layout_marginTop="500dp"
    android:layout_marginEnd="74dp">

    <androidx.cardview.widget.CardView

        android:id="@+id/card_view_gym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textAlignment="center"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/gym_image_pop_up"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/cd_team_ph"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/places1">

            </ImageView>

            <TextView
                android:id="@+id/gym_name_pop_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="170dp"
                android:gravity="center"
                android:text="@string/gym_title"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gym_address_pop_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:text="@string/gym_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/distance_pop_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:gravity="center"
                    android:text="@string/gym_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_more_info"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="250dp"
                android:contentDescription="@string/more_info"
                android:text="@string/more_info"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>